<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
                      http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.comsysto.android</groupId>
	<artifactId>android-parent</artifactId>
	<packaging>pom</packaging>
	<version>1.0-SNAPSHOT</version>
	<name>Android's Parent Pom</name>
	<url>http://www.comsysto.com</url>
	<modules>
		<module>serverone</module>
	</modules>
	<properties>
		<org.springframework.version>3.0.1.RELEASE</org.springframework.version>
		<org.hibernate.version>3.2.0.ga</org.hibernate.version>
		<javax.persistence.version>1.0.0-CR-1</javax.persistence.version>
        <slf4jVersion>1.5.8</slf4jVersion>			
	</properties>
	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<executions>
					<execution>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<source>1.6</source>
					<target>1.6</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>hibernate3-maven-plugin</artifactId>
				<!-- >version>2.0-alpha-2</version -->
				<configuration>
					<executions>
						<execution>
							<phase>process-classes</phase>
							<goals>
								<goal>hbm2ddl</goal>
							</goals>
						</execution>
					</executions>
					<components>
						<component>
							<name>hbm2ddl</name>
							<implementation>annotationconfiguration</implementation>
							<outputDirectory>target/hibernate3/sql</outputDirectory>
						</component>
					</components>
					<componentProperties>
						<drop>true</drop>
						<configurationfile>/src/test/resources/hibernate.cfg.xml</configurationfile>
						<outputfilename>schema.sql</outputfilename>
						<format>format</format>
					</componentProperties>
				</configuration>
			</plugin>
		</plugins>
		<extensions>
			<extension>
				<groupId>org.apache.maven.wagon</groupId>
				<artifactId>wagon-webdav</artifactId>
				<version>1.0-beta-2</version>
			</extension>
			<extension>
				<groupId>hsqldb</groupId>
				<artifactId>hsqldb</artifactId>
				<version>1.8.0.1</version>
			</extension>
		</extensions>
	</build>
	<reporting>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.3</version>
				<configuration>
					<testFailureIgnore>false</testFailureIgnore>
					<argLine>-Xms256m -Xmx512m -XX:PermSize=512m -XX:MaxPermSize=512m</argLine>
				</configuration>
			</plugin>
			<!-- >plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-report-plugin</artifactId>
				<version>2.0</version>
				</plugin -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-project-info-reports-plugin</artifactId>
				<version>2.0</version>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<configuration>
					<minmemory>128m</minmemory>
					<maxmemory>512</maxmemory>
				</configuration>
			</plugin>
		</plugins>
	</reporting>
	<dependencyManagement>
	<dependencies>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>${slf4jVersion}</version>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-log4j12</artifactId>
            <version>${slf4jVersion}</version>
            <scope>test</scope>
        </dependency>				
		<dependency>
			<groupId>org.hibernate.javax.persistence</groupId>
			<artifactId>hibernate-jpa-2.0-api</artifactId>
			<version>${javax.persistence.version}</version>
		</dependency>			
		<dependency>
			<groupId>org.hibernate</groupId>
			<artifactId>hibernate</artifactId>
			<version>${org.hibernate.version}</version>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>org.hibernate</groupId>
			<artifactId>hibernate-core</artifactId>
			<version>${org.hibernate.version}</version>
			<scope>compile</scope>
		</dependency>		
		<dependency>
			<groupId>org.hibernate</groupId>
			<artifactId>hibernate-annotations</artifactId>
			<version>3.3.1.GA</version>
			<scope>compile</scope>
		</dependency>		
		<!--
		Application Context (depends on spring-core, spring-expression, spring-aop, spring-beans)
		This is the central artifact for Spring's Dependency Injection Container and is generally always defined
		-->
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-context</artifactId>
			<version>${org.springframework.version}</version>
		</dependency>
		<!--
		Object-to-Relation-Mapping (ORM) integration with Hibernate, JPA, and iBatis.
		(depends on spring-core, spring-beans, spring-context, spring-tx)
		Define this if you need ORM (org.springframework.orm.*)
		-->
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-orm</artifactId>
			<version>${org.springframework.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-webmvc</artifactId>
			<version>${org.springframework.version}</version>			
			<scope>compile</scope>			
		</dependency>				
		<dependency>
			<groupId>commons-lang</groupId>
			<artifactId>commons-lang</artifactId>
			<version>2.1</version>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>commons-io</groupId>
			<artifactId>commons-io</artifactId>
			<version>1.3</version>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>commons-collections</groupId>
			<artifactId>commons-collections</artifactId>
			<version>3.2</version>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>org.htmlparser</groupId>
			<artifactId>htmlparser</artifactId>
			<version>1.6</version>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>commons-httpclient</groupId>
			<artifactId>commons-httpclient</artifactId>
			<version>3.1</version>
			<scope>compile</scope>
		</dependency>
		<dependency>
	       <groupId>vcard4j</groupId>
	       <artifactId>vcard4j</artifactId>
	       <version>1.1.3</version>
			<scope>compile</scope>
		</dependency>
		<dependency>
	       <groupId>xalan</groupId>
	       <artifactId>xalan</artifactId>
	       <version>2.7.0</version>
			<scope>compile</scope>
		</dependency>
		<dependency>
	       <groupId>xerces</groupId>
	       <artifactId>xercesImpl</artifactId>
	       <version>2.8.0</version>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>hsqldb</groupId>
			<artifactId>hsqldb</artifactId>
			<version>1.8.0.1</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-test</artifactId>
			<version>${org.springframework.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>commons-dbcp</groupId>
			<artifactId>commons-dbcp</artifactId>
			<version>1.2.1</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.easymock</groupId>
			<artifactId>easymock</artifactId>
			<version>2.3</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.easymock</groupId>
			<artifactId>easymockclassextension</artifactId>
			<version>2.3</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>3.8.1</version>
			<scope>test</scope>
		</dependency>		
		<dependency>
      		<groupId>org.jasypt</groupId>
      		<artifactId>jasypt</artifactId>
      		<version>1.5</version>
      		<scope>compile</scope>
  		</dependency>		
	</dependencies>
	</dependencyManagement>
	<repositories>
	        <repository>
	            <id>JBOSS</id>
	            <name>JBoss Repository</name>
	            <url>http://repository.jboss.org/maven2/</url>
	        </repository>	
	</repositories>
	<developers>
		<developer>
			<id>1</id>
			<name>Daniel Bartl</name>
			<email>d.bartl@comsysto.com</email>
			<organization>comsysto GmbH</organization>
		</developer>
		<developer>
			<id>2</id>
			<name>Mo ElBatya</name>
			<organization>comsysto GmbH</organization>
		</developer>
		<developer>
			<id>3</id>
			<name>Stefan Djurasic</name>
			<organization>comsysto GmbH</organization>
		</developer>
		<developer>
			<id>4</id>
			<name>Damir Abdic</name>
			<organization>comsysto GmbH</organization>
		</developer>		
	</developers>
</project>
